fix: wrap 2004 news abstracts

--- a/themes/2004/steampowered.css
+++ b/themes/2004/steampowered.css
@@ -202,8 +202,6 @@ DIV.box	{
 	width:180px;
 	position:relative;
 	font-size:8pt;
-        max-height:200px;
-        overflow:auto;
 	}
 .list{
 	width:80%;
